<resources>
    <string name="app_name">PavelWeatherApp</string>
    <string name="label_weather_search">Поиск погоды</string>
    <string name="hint_input_location">Введите название города или индекс</string>
    <string name="btn_show_weather">Показать погоду</string>
    <string name="btn_show_locations">Мои локации</string>
    <string name="btn_show_history">Моя история</string>
    <string name="label_weather_in_location">Погода в городе</string>
    <string name="btn_save_location">Сохранить локацию</string>
    <string name="btn_go_to_main">На главный экран</string>
    <string name="btn_save_result">Сохранить результат</string>
    <string name="label_choose_location">Выберите локацию</string>
    <string name="description_go_to_main">Вернуться на главный экран</string>
    <string name="error_while_getting_data">Ошибка при получении данных</string>
    <string name="toast_location_saved">Локация сохранена</string>
    <string name="toast_location_already_exists">Локация уже существует</string>
    <string name="toast_result_has_saved">Результат сохранён</string>
</resources>